[package]
name = "cdt-rs"
version = "0.1.0"
authors = ["Adam Getchell <adam@adamgetchell.org>"]
edition = "2021"
description = "Causal Dynamical Triangulations using Constrained Delaunay Triangulations in Rust"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
float-ord = "0.3.2"
rand = "0.8.5"
spade = { version = "2.12.1", features = ["serde"] }
assert_cmd = "2.0.16"


[dev-dependencies]
predicates = "3.1.2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
